[SDCP-609] fix: Page Navbar dropdowns hidden due to css overflow (#113)

--- a/assets/styles/navbar.scss
+++ b/assets/styles/navbar.scss
@@ -18,7 +18,9 @@
         box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
         z-index: 1007;
         flex: 0 0 auto;
-        overflow: hidden;
+
+        // [SDCP-609]: Commenting the next line until a better fix is implemented
+        //overflow: hidden;
     }
     .notif {
         width: 56px;
